@@ -1,3 +1,7 @@
+2009-07-30  Sebastian Marsching <sebastian.marsching@1und1.de>
+
+	Support for page flow variant extension points.
+
 2009-07-27  Martin Leidig  <mleidig@schlund.de>
 
 	Fixed possible deadlock within SessionEndNotificator when
